# mcp-airbnb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml  deny.toml  justfile  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_calendar_parser.rs  fuzz_detail_parser.rs  fuzz_graphql_detail.rs  fuzz_graphql_host.rs  fuzz_graphql_review.rs  fuzz_graphql_search.rs  fuzz_review_parser.rs  fuzz_search_parser.rs
specs/001-airbnb-mcp-server/: plan.md  spec.md  tasks.md
src/: README.md  error.rs  lib.rs  main.rs  test_helpers.rs
src/adapters/: README.md  composite.rs  mod.rs  shared.rs
src/adapters/cache/: README.md  memory_cache.rs  mod.rs
src/adapters/graphql/: README.md  client.rs  mod.rs
src/adapters/graphql/parsers/: README.md  detail.rs  host.rs  mod.rs  review.rs  search.rs
src/adapters/scraper/: README.md  calendar_parser.rs  client.rs  detail_parser.rs  mod.rs  rate_limiter.rs  review_parser.rs  search_parser.rs
src/config/: README.md  mod.rs  types.rs
src/domain/: README.md  analytics.rs  calendar.rs  listing.rs  mod.rs  review.rs  search_params.rs
src/mcp/: README.md  server.rs
src/ports/: README.md  airbnb_client.rs  cache.rs  mod.rs
tests/: README.md  analytical_tools_test.rs  functional_verification_test.rs  graphql_test.rs  mcp_server_test.rs  proptest_tests.rs  scraper_test.rs
