[package]
name = "mcp-airbnb"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
description = "MCP server for searching and browsing Airbnb listings"
license = "MIT"

[dependencies]
# MCP Protocol — official Rust SDK v0.16 (latest)
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-util", "io-std", "macros", "sync", "time"] }
async-trait = "0.1.89"

# HTTP client for web scraping
reqwest = { version = "0.13.2", features = ["json", "cookies"] }

# HTML parsing (CSS selectors)
scraper = "0.25.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
schemars = "1.2.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging (stderr only — stdout is reserved for MCP JSON-RPC)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Cache
lru = "0.16.3"

# Utils
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.5.8"
base64 = "0.22.1"

[dev-dependencies]
rmcp = { version = "0.16.0", features = ["server", "client", "macros", "transport-io", "schemars"] }
wiremock = "0.6.5"
tempfile = "3.25.0"
insta = { version = "1.46.3", features = ["json"] }
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"
proptest = "1.6.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
format_push_string = "allow"
