[package]
name = "mcp-airbnb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mcp-airbnb = { path = ".." }
serde_json = "1.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_search_parser"
path = "fuzz_targets/fuzz_search_parser.rs"
doc = false

[[bin]]
name = "fuzz_detail_parser"
path = "fuzz_targets/fuzz_detail_parser.rs"
doc = false

[[bin]]
name = "fuzz_calendar_parser"
path = "fuzz_targets/fuzz_calendar_parser.rs"
doc = false

[[bin]]
name = "fuzz_review_parser"
path = "fuzz_targets/fuzz_review_parser.rs"
doc = false

[[bin]]
name = "fuzz_graphql_search"
path = "fuzz_targets/fuzz_graphql_search.rs"
doc = false

[[bin]]
name = "fuzz_graphql_detail"
path = "fuzz_targets/fuzz_graphql_detail.rs"
doc = false

[[bin]]
name = "fuzz_graphql_review"
path = "fuzz_targets/fuzz_graphql_review.rs"
doc = false

[[bin]]
name = "fuzz_graphql_host"
path = "fuzz_targets/fuzz_graphql_host.rs"
doc = false
